--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Professional Hair Service">
     <meta property="og:description" content="About Our Salon">
     <meta property="og:image" content="https://sandalu-umayanga.github.io/storage/icon.jpge">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
