--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
                         </div>
                     </div>
             </div>
-
+            <div class="copyright">
+                <p>&copy; 2024 Hair Day. All rights reserved.</p>
+            </div>
         </div>
     </footer>
 </body>
