--- a/index.html
+++ b/index.html
@@ -32,30 +32,30 @@
         </nav>
     </header>
     <main class="main-features">
-        <div class="image-container">
+        <Article class="image-container">
             <img src="https://sandalu-umayanga.github.io/storage/cuts.jpg" alt="cuts">
             <div class="text-overlay">
                 <a href="cuts.html">Hair Cuts</a>
             </div>
-        </div>
-        <div class="image-container">
+        </Article>
+        <Article class="image-container">
             <img src="https://sandalu-umayanga.github.io/storage/color.webp" alt="styles">
             <div class="text-overlay">
                 <a href="styles.html">Coloring & Hair styles</a>
-            </div>
-        </div>
-        <div class="image-container">
+            </Article>
+        </Article>
+        <Article class="image-container">
             <img src="https://sandalu-umayanga.github.io/storage/nail.webp" alt="sevices">
             <div class="text-overlay">
                 <a href="services.html">Makeup @ Nail service</a>
-            </div>
-        </div>
-        <div class="image-container">
+            </Article>
+        </Article>
+        <Article class="image-container">
             <img src="https://sandalu-umayanga.github.io/storage/other.jpg" alt="others">
             <div class="text-overlay">
                 <a href="other.html">Awesome Beauty solutions</a>
-            </div>
-        </div>
+            </Article>
+        </Article>
     </main>
 
     <section class="description-section">
